refactor: modernize Java style with streams and single-responsibility methods